--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "axios": "^0.21.0",
+    "axios": "^0.21.4",
+    "cors": "^2.8.5",
     "express": "^4.15.0",
     "jquery": "^3.1.1",
     "mongoose": "^6.8.4",
     "mysql2": "^3.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^5.2.1"
   }
 }
